# $Revision$ $Date$ $Author$

PROJECT (frikingshark)

CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)


SET( INSTALL_LEVEL1_ONLY False )
SET( ANDROID_GLES1 False )


IF(COMMAND cmake_policy)
	cmake_policy(SET CMP0003 NEW)
ENDIF(COMMAND cmake_policy)

IF(ANDROID)
	FIND_LIBRARY ( GLES1_LIBRARY GLESv1_CM REQUIRED /usr/lib )
	FIND_LIBRARY ( GLES2_LIBRARY GLESv2 REQUIRED /usr/lib )
	FIND_LIBRARY ( EGL_LIBRARY EGL REQUIRED /usr/lib )
	FIND_LIBRARY ( TREMOLO_LIBRARY tremolo REQUIRED /usr/lib )
	FIND_LIBRARY ( ANDROID_LIBRARY android REQUIRED /usr/lib ) # Needed by app activiy
	FIND_LIBRARY ( ANDROID_LOG_LIBRARY log REQUIRED /usr/lib ) # Needed by app activiy
	FIND_PACKAGE ( PNG REQUIRED)
	FIND_PACKAGE ( ZLIB REQUIRED )
	FIND_PACKAGE ( OpenAL REQUIRED )

	set(CMAKE_SHARED_LIBRARY_PREFIX lib)
	set(CMAKE_STATIC_LIBRARY_PREFIX lib)
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/android/libs/${ARM_TARGET}/)
	set(LIBRARY_OUTPUT_PATH_ROOT ${PROJECT_BINARY_DIR}/android/libs/${ARM_TARGET}/)
	set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/android/libs/${ARM_TARGET}/)

ELSEIF(UNIX)
	FIND_PACKAGE ( X11 REQUIRED )
	FIND_PACKAGE ( OpenGL REQUIRED )
	FIND_PACKAGE ( OpenAL REQUIRED )
	FIND_PACKAGE ( PNG REQUIRED )
	FIND_LIBRARY (XRANDR_LIBARY Xrandr /usr/local/lib /usr/lib /sw/lib)
	FIND_LIBRARY (XINERAMA_LIBRARY Xinerama /usr/local/lib /usr/lib /sw/lib)
	FIND_LIBRARY (ALUT_LIBRARY alut /usr/local/lib /usr/lib /sw/lib)
	FIND_LIBRARY (VORBISFILE_LIBRARY vorbisfile /usr/local/lib /usr/lib /sw/lib)
	FIND_LIBRARY (VORBIS_LIBRARY vorbis /usr/local/lib /usr/lib /sw/lib)
	FIND_LIBRARY (OGG_LIBRARY ogg /usr/local/lib /usr/lib /sw/lib)

	set(CMAKE_SHARED_LIBRARY_PREFIX )
	set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/Demo/Bin/Release/)
	set(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/Demo/Bin/Release/)
ENDIF(ANDROID)


IF(UNIX AND NOT WIN32)
  IF(NOT ANDROID)
    ADD_DEFINITIONS(-g)
  ENDIF(NOT ANDROID)

  ADD_DEFINITIONS(-O3 -pthread)

  FIND_PROGRAM(CMAKE_UNAME uname /bin /usr/bin /usr/local/bin )
  IF(CMAKE_UNAME)
    EXEC_PROGRAM(uname ARGS -m OUTPUT_VARIABLE CMAKE_SYSTEM_PROCESSOR)
    SET(CMAKE_SYSTEM_PROCESSOR ${CMAKE_SYSTEM_PROCESSOR} CACHE INTERNAL
"processor type (i386 and x86_64)")
    IF(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
      ADD_DEFINITIONS(-fPIC)
    ENDIF(CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64")
  ENDIF(CMAKE_UNAME)
ENDIF(UNIX AND NOT WIN32)

INCLUDE_DIRECTORIES (
	./VectorLib
	./GameManagers
	./GameEntityLib
	./GameGUI
	./GameGUILib
	./GameGraphics
	./GameRunTime
	./GameRunTimeLib
	./PlayAreaElements
	./AnimationSystems
	./ParticleSystems
	./SoundSystems
)

INCLUDE ( ./VectorLib/CMakeLists.txt )
INCLUDE ( ./GameGUILib/CMakeLists.txt )
INCLUDE ( ./GameRunTimeLib/CMakeLists.txt )
INCLUDE ( ./GameEntityLib/CMakeLists.txt )

INCLUDE ( ./AirUnitTypes/CMakeLists.txt )
INCLUDE ( ./AnimationSystems/CMakeLists.txt )
INCLUDE ( ./BonusTypes/CMakeLists.txt )
INCLUDE ( ./GameEngine/CMakeLists.txt )
INCLUDE ( ./GameGraphics/CMakeLists.txt )
INCLUDE ( ./GameGUI/CMakeLists.txt )
INCLUDE ( ./GameManagers/CMakeLists.txt )
INCLUDE ( ./GameRunTime/CMakeLists.txt )
INCLUDE ( ./GroundUnitTypes/CMakeLists.txt )
INCLUDE ( ./GUISystems/CMakeLists.txt )
INCLUDE ( ./ParticleSystems/CMakeLists.txt )
INCLUDE ( ./PlayAreaElements/CMakeLists.txt )
INCLUDE ( ./WeaponTypes/CMakeLists.txt )
INCLUDE ( ./SoundSystems/CMakeLists.txt )

IF(NOT ANDROID)
	INCLUDE ( ./BSPDebugger/CMakeLists.txt )
	INCLUDE ( ./EntityEditor/CMakeLists.txt )
	INCLUDE ( ./FormationEditor/CMakeLists.txt )
	INCLUDE ( ./ScenarioEditor/CMakeLists.txt )
#	INCLUDE ( ./IATestSystems/CMakeLists.txt )
ENDIF(NOT ANDROID)

IF(ANDROID)
	install(TARGETS GameEngine DESTINATION ${PROJECT_BINARY_DIR}/android/libs/${ARM_TARGET}/) 
	install(FILES android/AndroidManifest.xml DESTINATION ${PROJECT_BINARY_DIR}/android/)
	install(FILES android/project.properties DESTINATION ${PROJECT_BINARY_DIR}/android/)
	install(DIRECTORY Demo/Resources/Scripts/ DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Scripts/ FILES_MATCHING PATTERN "*.cfg" PATTERN ".svn" EXCLUDE)
	install(DIRECTORY Demo/Resources/Shaders/ DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Shaders/ FILES_MATCHING PATTERN "*.c" PATTERN ".svn" EXCLUDE)
	install(DIRECTORY Demo/Resources/GUI/ DESTINATION ${PROJECT_BINARY_DIR}/android/assets/GUI/ FILES_MATCHING PATTERN "*.cfg" PATTERN ".svn" EXCLUDE)
	install(DIRECTORY Demo/Resources/GUI/ DESTINATION ${PROJECT_BINARY_DIR}/android/assets/GUI/ FILES_MATCHING PATTERN "*.png" PATTERN ".svn" EXCLUDE)
	install(DIRECTORY Demo/Resources/ DESTINATION ${PROJECT_BINARY_DIR}/android/assets/ FILES_MATCHING PATTERN "Background.ges" PATTERN ".svn" EXCLUDE)
	install(DIRECTORY Demo/Player/ DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Player/ FILES_MATCHING PATTERN "*.cfg" PATTERN ".svn" EXCLUDE)
	install(FILES     License.txt DESTINATION ${PROJECT_BINARY_DIR}/android/ RENAME copyright)

	IF(INSTALL_LEVEL1_ONLY)
		install(DIRECTORY Demo/Resources/ DESTINATION ${PROJECT_BINARY_DIR}/android/assets/ FILES_MATCHING PATTERN "Level1.ges" PATTERN ".svn" EXCLUDE)
		install(FILES Demo/Resources/Textures/Courier-11.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/PointBonusFontMask.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/PointBonusFont.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/sandPeq.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Level3TerrainColorMap.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Clouds.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/WaterB.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/WaterB.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Tiles.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Tiles.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Level1TerrainColorMap.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Clouds.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/rtrock_1.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/sandPeq.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Level3TerrainColorMap.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Clouds.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/WaterB.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/WaterB.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Level1Water.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)

		install(FILES Demo/Resources/Textures/SmokeAlpha.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Smoke.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Point.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/PointBonusFont.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Dreadnought.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/DreadnoughtTurret.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/DreadnoughtTurretDamageA.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/DreadnoughtTurretDamageB.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/DreadnoughtTurretDestroyed.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/EnemyBullet.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/DreadnoughtTower.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/DreadnoughtTowerWeapon.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/DreadnoughtTowerDestroyed.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Destroyer.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/DestroyerTurret.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/DestroyerTurretDamageA.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/DestroyerTurretDamageB.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/DestroyerTurretDestroyed.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Frigate.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/SmallShipTurret.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/SmallShipTurretDestroyed.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/SmallShipCannon.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/SmallShipBody.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/SmallShipBodyDestroyed.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/MediumBomber.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/BigBomber.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/LechoInferior.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/LechoSuperior.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/ArenaOscura.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/hiervsPeq.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/sandPeq.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/hiervsPeq.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Player.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/PlayerBullet.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Palm.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/TankBody.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/TankBodyDestroyed.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/TankTurret.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/TankTurretDestroyed.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/BigWood.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Wood.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/CrapHouses.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/CrapHouseGroup.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/BigBunker.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/BigBunkerDetroyed.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/BunkerTurret.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/BunkerTurretDamageA.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/BunkerTurretDamageB.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/BunkerTurretDestroyed.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/RookieFighter.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Hut.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Garage.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/SmallBunker.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Level1BaseTerrain.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Level1BaseMainBuilding.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Level1BaseSmallHangar.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/YellowDecoFighter.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/RedDecoFighter.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/BlueCrapHouse.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/AdobeBuilding.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/BonusBomb.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Level2BaseTerrain.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Level2BaseHangar.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/BonusWeapon.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/WeaponFighter.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/PointsFighter.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/VeteranFighter.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)
		install(FILES Demo/Resources/Textures/Level1Boss.png DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/)

		install(FILES Demo/Resources/Models/Background.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Dreadnought.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/DreadnoughtTurret.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/DreadnoughtTurretDamageA.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/DreadnoughtTurretDamageB.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/DreadnoughtTurretDestroyed.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/DreadnoughtCannon.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/EnemyBullet.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/DreadnoughtTower.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/DreadnoughtTowerWeapon.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/DreadnoughtTowerDestroyed.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Destroyer.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/DestroyerTurret.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/DestroyerTurretDamageA.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/DestroyerTurretDamageB.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/DestroyerTurretDestroyed.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/DestroyerCannon.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Frigate.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallShipTurret.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallShipTurretDestroyed.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallShipCannon.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallShip.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallShipDestroyed.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/MediumBomber.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/MediumBomberPropeller.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BigBomberPropeller.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BigBomber.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level1Terrain.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/PlayerFighter.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/PlayerBullet.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/PlayerBomb.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Palm.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/TankBody.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/TankBodyDestroyed.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/TankTurret.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/TankTurretDestroyed.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/TankCannon.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/HarborTypeC.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallCrapHouseTypeA.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/CrapHouseGroup.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/HarborTypeD.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/MediumBunker.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/MediumBunkerDestroyed.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BunkerTurret.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BunkerTurretDamageA.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BunkerTurretDamageB.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BunkerTurretDestroyed.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BunkerCannon.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/RookieFighter.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/HarborTypeA.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallHut.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/HarborTypeB.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BigCrapHouse.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BigHut.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BigBunker.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BigBunkerDestroyed.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/MediumCrapHouse.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallCrapHouseTypeB.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallCrapHouseTypeC.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Garage.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallBunker.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level1BaseTerrain.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level1BaseMainBuilding.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level1BaseSmallHangar.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level1BaseBigHangar.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/YellowDecoFighter.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/RedDecoFighter.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BlueCrapHouse.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallBlueCrapHouse.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/AdobeBuilding.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BonusBomb.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level2BaseTerrain.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level2BaseTerrainBarrierTypeA.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level2BaseTerrainBarrierTypeB.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level2BaseHangar.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BonusWeapon.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/WeaponFighter.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/PointsFighter.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/VeteranFighter.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level1BossBody.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level1BossTurret.gcm DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)

		install(FILES Demo/Resources/Models/Background.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Dreadnought.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/DreadnoughtTower.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Destroyer.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Frigate.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level1Terrain.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/HarborTypeC.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallCrapHouseTypeA.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/CrapHouseGroup.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/HarborTypeD.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/MediumBunker.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BunkerTurret.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/HarborTypeA.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallHut.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/HarborTypeB.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BigCrapHouse.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BigHut.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BigBunker.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/MediumCrapHouse.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallCrapHouseTypeB.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallCrapHouseTypeC.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Garage.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallBunker.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level1BaseTerrain.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level1BaseMainBuilding.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level1BaseSmallHangar.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level1BaseBigHangar.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/BlueCrapHouse.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/SmallBlueCrapHouse.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/AdobeBuilding.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level2BaseTerrain.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level2BaseHangar.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)
		install(FILES Demo/Resources/Models/Level1BossBody.gbs DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/)

		install(FILES Demo/Resources/Sounds/PointCount.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/PointCount.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BombCount.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BombCount.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BonusLife.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BonusLife.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/ButtonClick.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/ButtonClick.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/ButtonHover.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/ButtonHover.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/SmallExplosionWithTail.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/SmallExplosionWithTail.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/gameover.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/gameover.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/gameover.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/gameover.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/highscore.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/highscore.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/intermission.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/intermission.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BigExplosion.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BigExplosion.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BombFireball.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BombFireball.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BombLaunch.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BombLaunch.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BonusLife.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BonusLife.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BossBullet.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BossBullet.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BulletHit.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BulletHit.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/FighterCrash.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/FighterCrash.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/FighterExplosion.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/FighterExplosion.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/MediumExplosion.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/MediumExplosion.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/PlayerBullet.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/PlayerBullet.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BonusBomb.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BonusBomb.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BonusWeapon.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/BonusWeapon.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/SmallExplosion.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/SmallExplosion.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/SmallExplosionWithTail.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/SmallExplosionWithTail.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/StructureHit.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/StructureHit.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/level1music.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/level1music.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/level1intro.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)
		install(FILES Demo/Resources/Sounds/level1intro.ogg DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/)

	ELSE()
		install(DIRECTORY Demo/Resources/ DESTINATION ${PROJECT_BINARY_DIR}/android/assets/ FILES_MATCHING PATTERN "Level*.ges" PATTERN ".svn" EXCLUDE)
		install(DIRECTORY Demo/Resources/Models/ DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/ FILES_MATCHING PATTERN "*.gcm" PATTERN ".svn" EXCLUDE)
		install(DIRECTORY Demo/Resources/Models/ DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Models/ FILES_MATCHING PATTERN "*.gbs" PATTERN ".svn" EXCLUDE)
		install(DIRECTORY Demo/Resources/Sounds/ DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Sounds/ FILES_MATCHING PATTERN "*.ogg" PATTERN ".svn" EXCLUDE)
		install(DIRECTORY Demo/Resources/Textures/ DESTINATION ${PROJECT_BINARY_DIR}/android/assets/Textures/ FILES_MATCHING PATTERN "*.png" PATTERN ".svn" EXCLUDE)
	ENDIF()
ELSE()

	install(TARGETS GameEngine ./GameRunTime GameGraphics GameGUI GameManagers GUISystems AirUnitTypes AnimationSystems BonusTypes GroundUnitTypes ParticleSystems PlayAreaElements WeaponTypes EntityEditor FormationEditor ScenarioEditor DESTINATION share/frikingshark/Bin/Release)
	install(DIRECTORY Demo/Resources/Models/ DESTINATION share/frikingshark/Resources/Models/ FILES_MATCHING PATTERN "*.gbs")
	install(DIRECTORY Demo/Resources/Models/ DESTINATION share/frikingshark/Resources/Models/ FILES_MATCHING PATTERN "*.gcm")
	install(DIRECTORY Demo/Resources/Sounds/ DESTINATION share/frikingshark/Resources/Sounds/ FILES_MATCHING PATTERN "*.ogg")
	install(DIRECTORY Demo/Resources/Textures/ DESTINATION share/frikingshark/Resources/Textures/ FILES_MATCHING PATTERN "*.png")
	install(DIRECTORY Demo/Resources/Scripts/ DESTINATION share/frikingshark/Resources/Scripts/ FILES_MATCHING PATTERN "*.cfg")
	install(DIRECTORY Demo/Resources/Shaders/ DESTINATION share/frikingshark/Resources/Shaders/ FILES_MATCHING PATTERN "*.c")
	install(DIRECTORY Demo/Resources/GUI/ DESTINATION share/frikingshark/Resources/GUI/ FILES_MATCHING PATTERN "*.cfg")
	install(DIRECTORY Demo/Resources/GUI/ DESTINATION share/frikingshark/Resources/GUI/ FILES_MATCHING PATTERN "*.png")
	install(DIRECTORY Demo/Resources/ScenarioEditor/ DESTINATION share/frikingshark/Resources/ScenarioEditor/ FILES_MATCHING PATTERN "*.cfg")
	install(DIRECTORY Demo/Resources/ScenarioEditor/ DESTINATION share/frikingshark/Resources/ScenarioEditor/ FILES_MATCHING PATTERN "*.png")
	install(DIRECTORY Demo/Resources/FormationEditor/ DESTINATION share/frikingshark/Resources/FormationEditor/ FILES_MATCHING PATTERN "*.cfg")
	install(DIRECTORY Demo/Resources/FormationEditor/ DESTINATION share/frikingshark/Resources/FormationEditor/ FILES_MATCHING PATTERN "*.png")
	install(DIRECTORY Demo/Resources/EntityEditor/ DESTINATION share/frikingshark/Resources/EntityEditor/ FILES_MATCHING PATTERN "*.cfg")
	install(DIRECTORY Demo/Resources/EntityEditor/ DESTINATION share/frikingshark/Resources/EntityEditor/ FILES_MATCHING PATTERN "*.png")
	install(DIRECTORY Demo/Resources/ DESTINATION share/frikingshark/Resources/ FILES_MATCHING PATTERN "Level*.ges")
	install(DIRECTORY Demo/Resources/ DESTINATION share/frikingshark/Resources/ FILES_MATCHING PATTERN "Background.ges")
	install(DIRECTORY Demo/Player/ DESTINATION share/frikingshark/Player/ FILES_MATCHING PATTERN "*.cfg")
	install(FILES     License.txt DESTINATION share/doc/frikingshark/ RENAME copyright)
	install(FILES     Demo/Linux/frikingshark DESTINATION games PERMISSIONS OWNER_READ OWNER_EXECUTE GROUP_READ GROUP_EXECUTE)
	install(FILES     Demo/Linux/frikingshark.xpm DESTINATION share/pixmaps/)
	install(FILES     Demo/Linux/frikingshark.desktop DESTINATION share/applications/)
	install(FILES     Demo/Linux/menu DESTINATION share/menu/ RENAME frikingshark )
ENDIF()

include (InstallRequiredSystemLibraries)
set (CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
set (CPACK_PACKAGE_VERSION_MAJOR "1")
set (CPACK_PACKAGE_VERSION_MINOR "0")
set (CPACK_PACKAGE_CONTACT "javiermartingarcia@gmail.com")
set (CPACK_PACKAGE_INSTALL_DIRECTORY "frikingshark")
set (CPACK_GENERATOR "DEB")
include (CPack)
